# maya-reconstruct-normal

./: .gitignore  CMakeLists.txt  README.md  RESEARCH_CLAUDE.md  build.bat  build_plugins.bat  install_build_tools.bat  install_plugins.bat  normalMapZReconstruction.py  normalReconstructZ.cpp  normalReconstructZ_normal.cpp
arnold/: CMakeLists.txt  aiNormalReconstructZ.cpp  aiNormalReconstructZ.mtd  build.bat
maya_viewport/: CMakeLists.txt  build.bat  normalReconstructZ.cpp
